<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detpoids"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/poids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Poids :"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dettaille"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/taille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Taille :"
        android:inputType="numberDecimal"
        />
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_centimetre"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/radio_metre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Metre"
            />
        <RadioButton
            android:id="@+id/radio_centimetre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Centimetre"
            />
    </RadioGroup>
    <CheckBox
        android:id="@+id/commentaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Appreciation"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcul"
            />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reset"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Resultat"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/clic"
        />
</LinearLayout>
